Polish list fixes
* Adds bug collector
* Fixes unreadable link on 404 page

--- a/media/src/scss/elements/nav.scss
+++ b/media/src/scss/elements/nav.scss
@@ -65,3 +65,7 @@ footer {
         background-color: #FFFFFF;
     }
 }
+
+#bug-reporter:hover {
+    cursor: pointer;
+}
